tests/integration/schema/snapshots/main__integration__schema__search__comma_or_clauses_union_results.snap
---
source: tests/integration/schema/search.rs
assertion_line: 169
expression: json
---
{
  "json_version": "1",
  "data": {
    "query": "email, creating",
    "results": [
      {
        "coordinate": "User.email",
        "kind": "field",
        "description": "The user's email address",
        "via": [
          {
            "segments": [
              {
                "type_name": "Query",
                "field_name": "user"
              }
            ]
          },
          {
            "segments": [
              {
                "type_name": "Mutation",
                "field_name": "createPost"
              },
              {
                "type_name": "Post",
                "field_name": "author"
              }
            ]
          }
        ]
      },
      {
        "coordinate": "CreatePostInput",
        "kind": "type",
        "description": null,
        "via": []
      },
      {
        "coordinate": "Mutation.createPost",
        "kind": "field",
        "description": "Create a new post",
        "via": []
      }
    ],
    "success": true
  },
  "error": null
}
