tests/integration/schema/snapshots/main__integration__schema__search__comma_or_clauses_union_results_text.snap
---
source: tests/integration/schema/search.rs
assertion_line: 261
expression: text
---
3 results for "email, creating"

User.email — The user's email address
  field  ·  via Query.user, Mutation.createPost -> Post.author

CreatePostInput
  type

Mutation.createPost — Create a new post
  field
