tests/integration/schema/snapshots/main__integration__schema__search__default_excludes_deprecated_members.snap
---
source: tests/integration/schema/search.rs
assertion_line: 98
expression: json
---
{
  "json_version": "1",
  "data": {
    "query": "guest",
    "results": [],
    "success": true
  },
  "error": null
}
