tests/integration/schema/snapshots/main__integration__schema__search__default_excludes_deprecated_members_text.snap
---
source: tests/integration/schema/search.rs
assertion_line: 207
expression: text
---
No results for "guest"
