tests/integration/schema/snapshots/main__integration__schema__search__description_only_match_surfaces_result.snap
---
source: tests/integration/schema/search.rs
assertion_line: 90
expression: json
---
{
  "json_version": "1",
  "data": {
    "query": "membership",
    "results": [
      {
        "coordinate": "Role",
        "kind": "type",
        "description": "Membership tier governing access",
        "via": []
      }
    ],
    "success": true
  },
  "error": null
}
