tests/integration/schema/snapshots/main__integration__schema__search__description_only_match_surfaces_result_text.snap
---
source: tests/integration/schema/search.rs
assertion_line: 201
expression: text
---
1 result for "membership"

Role — Membership tier governing access
  type
