tests/integration/schema/snapshots/main__integration__schema__search__exact_name_match_returns_field.snap
---
source: tests/integration/schema/search.rs
assertion_line: 51
expression: json
---
{
  "json_version": "1",
  "data": {
    "query": "email",
    "results": [
      {
        "coordinate": "User.email",
        "kind": "field",
        "description": "The user's email address",
        "via": [
          {
            "segments": [
              {
                "type_name": "Query",
                "field_name": "user"
              }
            ]
          },
          {
            "segments": [
              {
                "type_name": "Mutation",
                "field_name": "createPost"
              },
              {
                "type_name": "Post",
                "field_name": "author"
              }
            ]
          }
        ]
      }
    ],
    "success": true
  },
  "error": null
}
