tests/integration/schema/snapshots/main__integration__schema__search__exact_name_match_returns_field_text.snap
---
source: tests/integration/schema/search.rs
assertion_line: 171
expression: text
---
1 result for "email"

User.email — The user's email address
  field  ·  via Query.user, Mutation.createPost -> Post.author
