tests/integration/schema/snapshots/main__integration__schema__search__fuzzy_match_tolerates_single_edit.snap
---
source: tests/integration/schema/search.rs
assertion_line: 74
expression: json
---
{
  "json_version": "1",
  "data": {
    "query": "emaill",
    "results": [
      {
        "coordinate": "User.email",
        "kind": "field",
        "description": "The user's email address",
        "via": [
          {
            "segments": [
              {
                "type_name": "Query",
                "field_name": "user"
              }
            ]
          },
          {
            "segments": [
              {
                "type_name": "Mutation",
                "field_name": "createPost"
              },
              {
                "type_name": "Post",
                "field_name": "author"
              }
            ]
          }
        ]
      }
    ],
    "success": true
  },
  "error": null
}
