tests/integration/schema/snapshots/main__integration__schema__search__fuzzy_match_tolerates_single_edit_text.snap
---
source: tests/integration/schema/search.rs
assertion_line: 189
expression: text
---
1 result for "emaill"

User.email — The user's email address
  field  ·  via Query.user, Mutation.createPost -> Post.author
