tests/integration/schema/snapshots/main__integration__schema__search__fuzzy_short_term_requires_exact_token.snap
---
source: tests/integration/schema/search.rs
assertion_line: 82
expression: json
---
{
  "json_version": "1",
  "data": {
    "query": "usr",
    "results": [],
    "success": true
  },
  "error": null
}
