tests/integration/schema/snapshots/main__integration__schema__search__fuzzy_short_term_requires_exact_token_text.snap
---
source: tests/integration/schema/search.rs
assertion_line: 195
expression: text
---
No results for "usr"
